--- a/template/app.template.ejs
+++ b/template/app.template.ejs
@@ -8,7 +8,7 @@ app.use(express.json({ limit: "100mb" }));
 app.use(cors());
 
 app.get("/api", (req, res) => {
-  res.status(200).send("ok");
+  res.status(200).send({message:"ok"});
 });
 
 module.exports = app;
