--- a/template/env.template.ejs
+++ b/template/env.template.ejs
@@ -1,16 +1,16 @@
-#backend
-PORT=4400
-JWT_SECRET_KEY=JWT_SECRET_KEY
-
 # domains
 #FRONTEND_DOMAIN=
 #BACKEND_DOMAIN=
 
+#backend
+PORT=4400
+JWT_SECRET_KEY=JWT_SECRET_KEY
+
 #database
-#HOST=
-#USER=root
-#PASSWORD=
-#DATABASE=
-#PORT_DB=
+HOST=
+USER=root
+PASSWORD=
+DATABASE=
+PORT_DB=
 
 
