--- a/template/app.template.ejs
+++ b/template/app.template.ejs
@@ -1,11 +1,12 @@
 const express = require("express");
 const cors = require("cors");
-
+const reqLogger = require("./middleware/requestLogger");
 const app = express();
 
 app.use(express.json({ limit: "100mb" }));
 
 app.use(cors());
+app.use(reqLogger);
 
 app.get("/api", (req, res) => {
   res.status(200).send({message:"ok"});
