--- a/template/constant.template.ejs
+++ b/template/constant.template.ejs
@@ -92,7 +92,7 @@ const responses = {
         },
         data: null,
         error: null,
-        message: null,
+        message: message,
       };
     },
     deleteSuccessResponse: () => {
