--- a/template/app.template.ejs
+++ b/template/app.template.ejs
@@ -1,6 +1,8 @@
 const express = require("express");
 const cors = require("cors");
-const reqLogger = require("./middleware/requestLogger");
+const reqLogger = require("./middleware/reqLogger.middleware");
+const { okResponse } = require("./constants/responses");
+
 const app = express();
 
 app.use(express.json({ limit: "100mb" }));
@@ -9,7 +11,7 @@ app.use(cors());
 app.use(reqLogger);
 
 app.get("/api", (req, res) => {
-  res.status(200).send({message:"ok"});
+  res.status(200).send(okResponse("server is running"));
 });
 
 module.exports = app;
