--- a/template/service.template.ejs
+++ b/template/service.template.ejs
@@ -1,20 +1,32 @@
 const pool = require("../../config/db.config");
 
 const getAll<%= capitalize(plural(entityName)) %> = async () => {
-  const [results] = await pool.query(
-    "SELECT * FROM <%= entityName %>"
-  );
-
-  return results;
+  try{
+    const [results] = await pool.query(
+      "SELECT * FROM <%= plural(entityName) %>"
+    );
+  
+    return results;
+  } catch(err){
+    console.log(err)
+    throw new Error(err)
+  }
+  
 };
 
 const getSingle<%= capitalize(entityName) %> = async (id) => {
-  const [[result]] = await pool.query(
-    "SELECT * FROM <%= entityName %> WHERE id = ?",
-    [id]
-  );
-
-  return result;
+  try{
+    const [[result]] = await pool.query(
+      "SELECT * FROM <%= plural(entityName) %> WHERE id = ?",
+      [id]
+    );
+  
+    return result;
+  } catch(err){
+    console.log(err)
+    throw new Error(err)
+  }
+ 
 };
 
 const create<%= capitalize(entityName) %> = async (body) => {
@@ -26,7 +38,7 @@ const create<%= capitalize(entityName) %> = async (body) => {
     await conn.beginTransaction();
 
     const [{insertId}] = await pool.query(
-        `INSERT INTO <%= entityName %> (name) VALUES (?)`,
+        `INSERT INTO <%= plural(entityName) %> (name) VALUES (?)`,
         [name]
     );
 
@@ -49,7 +61,7 @@ const update<%= capitalize(entityName) %> = async (id, body) => {
     await conn.beginTransaction();
 
     const [result] = await pool.query(
-        `UPDATE <%= entityName %> SET name = ? WHERE id = ?`,
+        `UPDATE <%= plural(entityName) %> SET name = ? WHERE id = ?`,
         [name, id]
     );
 
@@ -70,7 +82,7 @@ const delete<%= capitalize(entityName) %> = async (id) => {
     await conn.beginTransaction();
 
     const [result] = await pool.query(
-        `DELETE FROM <%= entityName %> WHERE id = ?`,
+        `DELETE FROM <%= plural(entityName) %> WHERE id = ?`,
         [id]
     );
 
