--- a/template/services/service.template.ejs
+++ b/template/services/service.template.ejs
@@ -1,4 +1,4 @@
-const pool = require("../../config/db.config");
+const pool = require("../config/db.config");
 
 const getAll<%= capitalize(plural(entityName)) %> = async () => {
   try{
