--- a/template/routes/authRoute.template.ejs
+++ b/template/routes/authRoute.template.ejs
@@ -7,7 +7,7 @@ const {
   loginSchema,
   forgotPasswordSchema,
   resetPasswordSchema,
-} = require("../validations/auth.validation");
+} = require("../validations/auth.validations");
 
 const {
   signup,
