--- a/template/routes/authRoute.template.ejs
+++ b/template/routes/authRoute.template.ejs
@@ -14,7 +14,7 @@ const {
   login,
   forgotPassword,
   resetPassword,
-} = require("../controllers/auth.controller");
+} = require("../controllers/auth.controllers");
 
 const router = express.Router();
 
