--- a/template/middleware/reqLoggerMiddleware.template.ejs
+++ b/template/middleware/reqLoggerMiddleware.template.ejs
@@ -7,9 +7,10 @@ const reqLogger = (req, res, next) => {
   
       console.log(
         ` - Incoming Request: ${req.method} ${req.url}\n`,
-        `- Status Code: ${res.statusCode}\n`,
-        // `- Response: ${res.sendingResponse.error || res.sendingResponse.message}\n`,
-        `- Response Time: ${responseTime} ms\n`
+        ` - Request body: ${JSON.stringify(req.body)}\n`,
+        ` - Status Code: ${res.statusCode}\n`,
+        // ` - Response: ${res.sendingResponse.error || res.sendingResponse.message}\n`,
+        ` - Response Time: ${responseTime} ms\n`
       );
     });
   
